<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_Theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="arrow_forward">Пользовательское соглашение</string>

    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_to_the_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_developer">putilov0407@gmail.com</string>
    <string name="link_to_the_offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communications_problem1">Проблемы со связью</string>
    <string name="communications_problem2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>

    <string name="artwork">Обложка альбома</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration_start">00:00</string>

</resources>