<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".main.ui.activity.MainActivity"
    android:padding="@dimen/margin_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginBottom="@dimen/margin_main"
        />

    <Button
        android:id="@+id/buttonSearch"
        app:icon="@drawable/ic_search"
        android:text="@string/search"
        style="@style/ButtonStyleMain"
        />

    <Button
        android:id="@+id/buttonMedia"
        app:icon="@drawable/ic_media"
        android:text="@string/media"
        style="@style/ButtonStyleMain"/>

    <Button
        android:id="@+id/buttonSettings"
        app:icon="@drawable/ic_settings"
        android:text="@string/settings"
        style="@style/ButtonStyleMain"/>
</LinearLayout>