<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".main.ui.activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSetting"
        app:title="@string/search"
        style="@style/panelHeaderToolbar"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_edit_text"
        android:layout_marginEnd="@dimen/margin_edit_text"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            tools:context=".SearchActivity"
            android:background="?attr/edit_text"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_search"
                app:tint="?attr/icon_search"
                android:layout_margin="@dimen/padding_text"/>

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:layout_gravity="center_vertical"
                android:hint="@string/search"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="?attr/text_search"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="@dimen/text_size_16"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/searchClearIcon"
                android:layout_width="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                app:tint="?attr/icon_search"
                android:layout_margin="@dimen/padding_text"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="@dimen/sizeProgressBar"
            android:layout_height="@dimen/sizeProgressBar"
            android:layout_marginTop="148dp"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/placeholderNothingWasFound"
            style="@style/searchPlaceholder">

            <ImageView
                style="@style/searchImage"
                android:src="@drawable/ic_nothingfound"/>

            <TextView
                style="@style/searchTextview"
                android:text="@string/nothing_found"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholderCommunicationsProblem"
            style="@style/searchPlaceholder">

            <ImageView
                android:src="@drawable/ic_communicationproblems"
                style="@style/searchImage"/>

            <TextView
                style="@style/searchTextview"
                android:text="@string/communications_problem1"/>

            <TextView
                style="@style/searchTextview"
                android:text="@string/communications_problem2"/>

            <Button
                android:id="@+id/button_return"
                style="@style/searchButtonRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="?attr/colorOnSecondary"
                android:text="@string/refresh_button"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_size_14"
                android:fontFamily="@font/ys_display_medium"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="Вы искали"
                android:gravity="center"
                android:textSize="19sp"
                android:textColor="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <Button
                android:id="@+id/button_clear_history"
                style="@style/searchButtonRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="?attr/colorOnSecondary"
                android:text="Очистить историю"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_size_14"
                android:fontFamily="@font/ys_display_medium"
                android:inputType="textCapSentences"
                android:layout_margin="24dp"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>